tests/ui/associated-inherent-types/inherent-assoc-ty-mismatch-issue-153539.stderr
error[E0207]: the type parameter `X` is not constrained by the impl trait, self type, or predicates
  --> $DIR/inherent-assoc-ty-mismatch-issue-153539.rs:9:6
   |
LL | impl<X> S<'_> {
   |      ^ unconstrained type parameter

error[E0308]: mismatched types
  --> $DIR/inherent-assoc-ty-mismatch-issue-153539.rs:17:5
   |
LL | fn ret_ref_local<'e>() -> &'e i32 {
   |                           ------- expected `&'e i32` because of return type
...
LL |     f(&1)
   |     ^^^^^ expected `&i32`, found `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0207, E0308.
For more information about an error, try `rustc --explain E0207`.
